Java 11 bugfix